2007-05-21  Vincent Untz  <vuntz@gnome.org>

	Move the calendar popup code in a new file.
	Implement saving of the state of appointment expanders in gconf.

	* Makefile.am: add new files, generate clock-typebuiltins.[ch]
	* calendar-window.[ch]: new GtkWindow-derived widget, that implements
	the calendar popup. Based on code from clock.c (which has been of
	course removed)
	* clock.h: new, with stuff from clock.c needed by CalendarWindow
	* clock.schemas.in: add new gconf keys for the state of expanders
	* clock.c: (destroy_clock): remove now unneeded code
	(create_calendar): simplify, now only creates a CalendarWindow
	(update_popup): updated
	(format_changed): update CalendarWindow
	(gmt_time_changed): update CalendarWindow
	(show_week_changed): update CalendarWindow
	(fill_clock_applet): updated

2007-05-20  Vincent Untz  <vuntz@gnome.org>

	Have separate treeviews for appointments, birthdays and weather.
	Use GtkExpander to let the user hide them.
	Fix most of bug #165732
	Based on patch by Priit Laes <amd@store20.com>

	* Makefile.am: prepare for installation of some icons, even if we
	don't install some right now. This might get reverted later.
	* calendar-client.[ch]: (get_source_uri): new
	(calendar_appointment_equal): take into account the uri
	(calendar_appointment_copy): ditto
	(calendar_appointment_finalize): ditto
	(calendar_appointment_init): ditto
	* clock.c: (destroy_clock): updated for new treeviews
	(is_appointment): new
	(is_birthday): new
	(is_weather): new
	(create_hig_frame): kill
	(set_renderer_pixbuf_pixmap_for_bday): new
	(set_renderer_pixbuf_pixmap_for_weather): new
	(appointment_pixbuf_cell_data_func): small update
	(birthday_pixbuf_cell_data_func): new
	(weather_pixbuf_cell_data_func): new
	(clock_expander_activated): new
	(create_task_list): use a GtkExpander instead of a frame
	(handle_appointments_changed): small update
	(create_list_for_appointment_model): new, mostly based on